2008-06-22  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: -l is --log-output only, not --logfile

2008-07-08  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.5, a release 
	on branch_0_28

2008-06-30  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.4, a bugfix release 
	on branch_0_28

2008-06-22  Dave Morrison  <drm@finkproject.org>

	* bootstrap: fix problem with bootstrapping when pkginfo is present

2008-06-20  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.3, a release on
	branch_0_28

2008-06-10  Dave Morrison  <drm@finkproject.org>

	* bootstrap: backport changes to bootstrap

2008-05-04  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.2, a release on
	branch_0_28

2008-03-11  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.1, a release on
	branch_0_28

2008-01-20  Dave Morrison  <drm@finkproject.org>

	* MANIFEST: Remove version/vpp.pm, version.pm

2008-01-20  Dave Morrison  <drm@finkproject.org>

	* VERSION: Bumped package manager version to 0.28.0, a new release (on
	branch_0_28)

2008-01-01  Daniel Macks  <dmacks@netspace.org>

	* bootstrap, dpkg-checkall.sh, fink-virtual-pkgs.in, fink.in, inject.pl, install.sh, pathsetup.sh.in, postinstall.pl.in, setup.sh: Update copyright.

2007-11-01  Dave Morrison  <drm@finkproject.org>

	* postinstall.pl.in: if /sw/fink/10.5 exists but isn't a symlink, 
	remove it

2007-10-24  Dave Morrison  <drm@finkproject.org>

	* postinstall.pl.in: better documentation, and cp -> cp -f; only try
	to create the 10.5 symlink once
	* fink.info.in: include Distribution

2007-10-23  Dave Morrison  <drm@finkproject.org>

	* REVISION: 10.5 gets its own revision
	* MANIFEST, install.sh: handle new update packages
	* postinstall.pl.in: overhaul the update process

2007-10-16  Daniel Macks  <dmacks@netspace.org>
